# supply-chain-forecaster

./: .env.example  .env.prod.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_AUDIT.md  README.md  ROADMAP.md  branch_protection.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
api/: __init__.py  app.py  main.py
api/routes/: auth.py  (+6 more)
config/: __init__.py  base_config.py  dev_config.py  prod_config.py
dashboard/: __init__.py  app.py  callbacks.py  layouts.py  main.py
docs/: CI_TROUBLESHOOTING.md  IMPLEMENTATION_NOTES.md  README.md  performance_optimization.md  tests.md
examples/: README.md
k8s/: README.md  api-deployment.yaml  dashboard-deployment.yaml  ingress.yaml
models/: __init__.py  base.py  registry.py
scripts/: analyze_profiling.py  build_push_images.sh  ci_cd_utils.sh  cleanup_cd_test_files.sh  cleanup_temp_files.sh  deploy_model.py  evaluate_model.py  generate_cd_secrets.sh  generate_cd_secrets_test.sh  generate_mock_kube_config.sh  github_environments_checklist.md  local_cd_verification.sh  profile_application.py  roadmap_update_template.md  run_dashboard_optimization_tests.py  run_model_optimization_tests.py  run_with_profiling.sh  setup_dev_environment.bat  setup_dev_environment.sh  setup_github_environments.md  setup_local_k8s.sh  test_cd_workflow.sh  validate_cd_workflow.sh
tests/: conftest.py
utils/: __init__.py  caching.py  dashboard_optimization.py  data_processing.py  error_handling.py  evaluation.py  logging.py  monitoring.py  profiling.py
(+93 files in other folders)
